--- a/index.html
+++ b/index.html
@@ -5,37 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Terminal Portfolio by Sat Naing</title>
-    <meta name="title" content="Terminal Portfolio by Sat Naing" />
+    <title>hexedbyte</title>
+    <meta name="title" content="hexedbyte - Red Teaming" />
     <meta
       name="description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="hexedbyte assembles red teams around the globe. A red team is a group of people authorized and organized to emulate a potential adversary's attack or exploitation capabilities against an enterprise's security posture."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://terminal.satnaing.dev/" />
-    <meta property="og:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="og:url" content="https://hexedbyte.com/" />
+    <meta property="og:title" content="hexedbyte - Red Teaming" />
     <meta
       property="og:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="hexedbyte assembles red teams around the globe. A red team is a group of people authorized and organized to emulate a potential adversary's attack or exploitation capabilities against an enterprise's security posture."
     />
     <meta
       property="og:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="https://hexedbyte.com/hexedbyte-og.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://terminal.satnaing.dev/" />
-    <meta property="twitter:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="twitter:url" content="https://hexedbyte.com/" />
+    <meta property="twitter:title" content="hexedbyte - Red Teaming" />
     <meta
       property="twitter:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="hexedbyte teaches red teaming and assembles red teams around the globe. A red team is a group of people authorized and organized to emulate a potential adversary's attack or exploitation capabilities against an enterprise's security posture."
     />
     <meta
       property="twitter:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="https://hexedbyte.com/hexedbyte-og.png"
     />
 
     <!-- Favicons and assets -->
